# ghostwriter-court

./: .gitignore  README.md  agent_config.yaml  cgi.py  main.py  main_router.py  orchestrator.py  pyproject.toml  render.yaml  requirements.txt
agents/: brief_writer.py  chain.py  investigator.py  negotiator.py  policy.py  similarity.py  synthesizer.py
dotenv/: __init__.py
