[project]
name = "ghostwriter-court"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "band-sdk[anthropic,langgraph]>=0.2.11",
    "fastapi>=0.115.0",
    "fpdf2>=2.8.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]
